--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
+  },
+  "peerDependencies": {
+    "framer-motion": "^11.0.0"
   }
 }
