--- a/apps/workbench/package.json
+++ b/apps/workbench/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@repo/ui": "*",
-    "next": "16.1.0",
+    "framer-motion": "12.29.2",
+    "next": "^16.1.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "framer-motion": "12.29.2"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
