--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "prettier": "^3.7.4",
     "turbo": "^2.7.6",
     "typescript": "5.9.2"
@@ -20,5 +21,9 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@fontsource/ibm-plex-mono": "^5.2.7",
+    "tailwindcss": "^4.1.18"
+  }
 }
