--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "prettier": "^3.7.4",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "turbo": "^2.7.6",
     "typescript": "5.9.2"
   },
