--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "validate:color-tokens": "node scripts/validate-color.mjs"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
